# Algorithms_In_C

./: Algorithms_in_C  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  run.sh
sort/: main.c  quick_sort.c
sort/headers/: main.h  quick_sort.h
src/headers/: bubble_sort.h  insertion_sort.h  main.h  merge_sort.h  quick_sort.h  selection_sort.h  utils.h
src/sort/: bubble_sort.c  insertion_sort.c  main.c  merge_sort.c  quick_sort.c  selection_sort.c
src/utils/: utils.c
